--- a/pages/18602.html
+++ b/pages/18602.html
@@ -1383,16 +1383,22 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#quantum_gravity_correction'>Quantum gravity correction</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#QuantumGravityCorrection'>Quantum gravity correction</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_4d99e44eacf1a20f08491071c44efaeec7c46e28_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
 
-<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_f2ac09945f1d82ada37e78e898801501b6428487_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_4d99e44eacf1a20f08491071c44efaeec7c46e28_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
 
-<h2 id='quantum_gravity_correction'>Quantum gravity correction</h2>
+<p>Similarly there is the anomalous magenetic moment of the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> and the other <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a>.</p>
 
-<p>The further corrections of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>perturbative quantum gravity</a> to the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> have been computed in (<a href='#BerendsGastman75'>Berends-Gastman 75</a>) and found to be finite without need for <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>:</p>
+<h2 id='details'>Details</h2>
+
+<p>(…) for the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> see e.g. <a href='#Scharf95'>Scharf 95, section 3.10</a> (…)</p>
+
+<h2 id='QuantumGravityCorrection'>Quantum gravity correction</h2>
+
+<p>The further corrections of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>perturbative quantum gravity</a> to the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> have been computed in (<a href='#BerendsGastman75'>Berends-Gastman 75</a>) and found to be finite without need for <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. These <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contribute:</p>
 
 <p><img src='https://www.physicsforums.com/attachments/gravityvertexcorrectionsforqed-png.219804/'/></p>
 
@@ -1416,10 +1422,10 @@ margin-left: 0em;
 <li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75'>doi:10.1016/0370-2693(75)90608-5</a>90608-5))</li>
 </ul>
 
-<p>Discussion in <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>:</p>
+<p>This discussion is adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_f2ac09945f1d82ada37e78e898801501b6428487_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_4d99e44eacf1a20f08491071c44efaeec7c46e28_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1444,7 +1450,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  6, 2018 09:58:21 
+  Revised on February  6, 2018 10:30:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
