--- a/pages/18840.html
+++ b/pages/18840.html
@@ -439,15 +439,25 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+field+histories'>space of field histories</a></p>
+</li>
 </ul>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange</a> <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -456,10 +466,22 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/advanced+and+retarded+causal+propagators'>advanced and retarded propagator</a>,</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+</li>
+</ul>
 </li>
 </ul>
 
@@ -467,11 +489,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a> <a class='existingWikiWord' href='/nlab/show/geometric+quantization+of+symplectic+groupoids'>of symplectic groupoids</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a>, <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a></p>
 </li>
 </ul>
 
@@ -487,7 +509,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observables</a></p>
 </li>
 
 <li>
@@ -557,6 +579,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Wightman propagator</a></p>
+</li>
 </ul>
 </li>
 </ul>
@@ -621,7 +647,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a></p>
 </li>
 </ul>
 
@@ -663,38 +689,16 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M%C3%B8ller+operator'>quantum Møller operator</a></p>
+</li>
 </ul>
 </li>
 
@@ -708,6 +712,68 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>(&quot;re-&quot;)normalization scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+condition'>(&quot;re&quot;-)normalization condition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>/<a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>relative effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Wilsonian RG</a>, <a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Polchinski flow equation</a></p>
 </li>
 </ul>
 </li>
@@ -842,8 +908,8 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a>, the concept of <em>noncommutative probability space</em> or <em>quantum probability space</em> is the generalization of that of <em><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></em> as the concept of “space” is generalized to <a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>non-commutative geometry</a>.</p>
 
-<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, and encode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>The basic idea is to encode a would-be <a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a> dually in its <a class='existingWikiWord' href='/nlab/show/algebra+of+functions'>algebra of functions</a> <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, typically regarded as a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, and encode the <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> as a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on this star algebra</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒜</mi><mo>⟶</mo><mi>ℂ</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \langle
     (-) 
   \rangle
@@ -854,11 +920,15 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Segal65'>Segal 65</a>, <a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> implicit (in contrast to the classical formalization of <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a> by <a class='existingWikiWord' href='/nlab/show/Andrey+Kolmogorov'>Andrey Kolmogorov</a>).</p>
+<p>Hence this primarily <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizes</a> the concept of <em><a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a></em> <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>A</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle A\rangle</annotation></semantics></math> (<a href='#Segal65'>Segal 65</a>, <a href='#Whittle92'>Whittle 92</a>) while leaving the nature of the underlying <a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability measure</a> implicit (in contrast to the classical formalization of <a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a> by <a class='existingWikiWord' href='/nlab/show/Andrey+Kolmogorov'>Andrey Kolmogorov</a>).</p>
 
-<p>Often <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
+<p>Often <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is assumed/required to be a <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a> (e.g. <a href='#Kuperberg05'>Kuperberg 05, section 1.8</a>). Often <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is taken to be the full algebra of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded operators</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> (e.g. <a href='#Attal'>Attal, def. 7.1</a>).</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum physics</a>, <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> (or a <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net</a> thereof) and <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>\langle (-)\rangle</annotation></semantics></math> is a particular <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a>, for instance a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>.</p>
+
+<p>The formulation of <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a> from the algebraic perspective of quantum probability is known as <em><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></em> (<a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a>).</p>
+
+<p>The formulation of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> from the algebraic perspective of quantum probability is known as <em><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative algebraic quantum field theory</a></em> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>pAQFT</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -890,7 +960,7 @@ margin-left: 0em;
 </li>
 
 <li id='Gleason09'>
-<p>Jonathan Gleason, <em>The <math class='maruku-mathml' display='inline' id='mathml_968fad8e642a13df18888873dd5d3fb7a5d150bc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebraic formalism of quantum mechanics</em>, 2009 (<a href='http://www.math.uchicago.edu/~may/VIGRE/VIGRE2009/REUPapers/Gleason.pdf'>pdf</a>)</p>
+<p>Jonathan Gleason, <em>The <math class='maruku-mathml' display='inline' id='mathml_8b7573d3b4519bcf48856d2d42a367a2e905dfce_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebraic formalism of quantum mechanics</em>, 2009 (<a href='http://www.math.uchicago.edu/~may/VIGRE/VIGRE2009/REUPapers/Gleason.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -931,14 +1001,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 20, 2018 12:08:33 
+  Revised on February  6, 2018 10:54:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+probability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+probability/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quantum+probability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+probability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
