--- a/pages/18980.html
+++ b/pages/18980.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      muon in nLab
+      lepton in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      muon
+      lepton
   </h1>
 
 
@@ -460,7 +460,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>muon</em> is one of the fundamental <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>/<a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, one of the <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a>.</p>
+<p>In the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, a <em>lepton</em> is a <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a> that couples to the <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> or the <a class='existingWikiWord' href='/nlab/show/nuclear+force'>weak nuclear force</a> nut <em>not</em> to the <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a>. (Otherwise one speaks of <em><a class='existingWikiWord' href='/nlab/show/hadron'>hadrons</a></em>.)</p>
+
+<p>This includes the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a>, <a class='existingWikiWord' href='/nlab/show/muon'>muon</a>, …</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -470,8 +472,10 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>See also</p>
+
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Muon'>Muon</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Lepton'>Lepton</a></em></li>
 </ul>
 
 <p>
@@ -479,22 +483,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  6, 2018 10:21:09 
+  Created on February  6, 2018 10:20:08 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/muon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/muon/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/muon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/muon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lepton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/muon" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/lepton" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/muon" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/lepton" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/muon" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/lepton" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
