--- a/pages/4689.html
+++ b/pages/4689.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1085,7 +1085,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#nonrenormalizablity'>Non-renormalizablity</a></li><li><a href='#ReferencesAsAnEffectiveFieldTheory'>As an effective perturbative field theory</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#effects'>Effects</a><ul><li><a href='#CorrectionToAnomalousMagneticMomentOfTheLeptons'>Correction to anomalous magnetic moment of the leptons</a></li></ul></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#nonrenormalizablity'>Non-renormalizablity</a></li><li><a href='#ReferencesAsAnEffectiveFieldTheory'>As an effective perturbative field theory</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A theory of <em>quantum gravity</em> (QG) is supposed to be a <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> (QFT) – or something similar – that corresponds to the <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, possibly by <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a>.</p>
@@ -1148,7 +1148,7 @@ margin-left: 0em;
 
 <p>Still another suggestion has been that ordinary quantum field theory might be seen to apply to the ordinary configuration space and action functional of general relativity, if only a suitably adapted parameterization of the configuration space is chosen. Notably one observes that <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a>s may be encoded in terms of <a class='existingWikiWord' href='/nlab/show/connection+on+a+bundle'>connections on the tangent bundle</a> – the <a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a> – this being manifestly analogous to the nature of the fields in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>. (See <a class='existingWikiWord' href='/nlab/show/first-order+formulation+of+gravity'>first-order formulation of gravity</a>).</p>
 
-<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_60288264d1dd8e358b10ff7417d6494a99aaf4d9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
+<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_ae789885f2f9d299d20575a3254fb2f6a59ca3d8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
 
 <p>A plethora of further suggestions has developed out of this, which in the literature often still go under the name “LQG”, even though they may abandon the description of configuration spaces of metrics in terms of loop observables. There is for instance the approach of <em>spin foams</em> or <em><span class='newWikiWord'>causal dynamical triangulations<a href='/nlab/new/causal+dynamical+triangulations'>?</a></span></em>, and that of <em><a class='existingWikiWord' href='/nlab/show/causet'>causets</a></em> , to name just a few.</p>
 
@@ -1166,7 +1166,15 @@ margin-left: 0em;
 
 <p>As a result, the field of fundamental physics today finds itself in a somewhat awkward position where the need for theoretical progress concerning quantum gravity for conceptual reasons is widely appreciated, but where disagreements about the viability of various proposals finds no conclusive resolution and divides the community.</p>
 
-<h2 id='examples'>Examples</h2>
+<h2 id='effects'>Effects</h2>
+
+<h3 id='CorrectionToAnomalousMagneticMomentOfTheLeptons'>Correction to anomalous magnetic moment of the leptons</h3>
+
+<p>The corrections of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a> quantum gravity to the <a class='existingWikiWord' href='/nlab/show/anomalous+magnetic+moment'>anomalous magnetic moment</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> have been computed in (<a href='#BerendsGastman75'>Berends-Gastman 75</a>) and found to be finite, without need for <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. These <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contribute:</p>
+
+<p><img src='https://www.physicsforums.com/attachments/gravityvertexcorrectionsforqed-png.219804/'/></p>
+
+<h2 id='special_cases'>Special cases</h2>
 
 <ul>
 <li>
@@ -1276,7 +1284,19 @@ margin-left: 0em;
 <li id='BFHPR16'><a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, Thomas-Paul Hack, Nicola Pinamonti, <a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, <em>Cosmological perturbation theory and quantum gravity</em>, Journal of High Energy Physics August 2016:32 (<a href='https://arxiv.org/abs/1605.02573'>arXiv:1605.02573</a>)</li>
 </ul>
 
-<p>For of perturbative <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> see at</p>
+<p>Corrections at <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> from <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> to the <a class='existingWikiWord' href='/nlab/show/anomalous+magnetic+moment'>anomalous magnetic moment</a> of the <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a> are discussed in</p>
+
+<ul>
+<li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75'>doi:10.1016/0370-2693(75)90608-5</a>90608-5))</li>
+</ul>
+
+<p>and adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
+
+<ul>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_ae789885f2f9d299d20575a3254fb2f6a59ca3d8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+</ul>
+
+<p>For more discussion of perturbative <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> see at</p>
 
 <ul>
 <li>
@@ -1300,14 +1320,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 26, 2018 08:11:34 
+  Revised on February  6, 2018 10:29:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
