--- a/pages/9177.html
+++ b/pages/9177.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -457,14 +457,20 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>electron</em> is one of the fundamental <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>/<a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>.</p>
+<p>The <em>electron</em> is one of the fundamental <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>/<a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, one of the <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a>.</p>
 
 <p>Mathematically, the electron is a <a class='existingWikiWord' href='/nlab/show/particle'>quantum</a> of a <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>.</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> the electron <a class='existingWikiWord' href='/nlab/show/interaction'>interacts</a> with the <a class='existingWikiWord' href='/nlab/show/photon'>photon</a> via the <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon interaction</a>.</p>
+
+<h2 id='properties'>Properties</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/anomalous+magnetic+moment'>anomalous magnetic moment</a></li>
+</ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -491,14 +497,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 20, 2018 11:29:00 
+  Revised on February  6, 2018 10:19:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
