--- a/pages/8208.html
+++ b/pages/8208.html
@@ -1048,6 +1048,14 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>The original article is</p>
+
+<ul>
+<li>H. Kawai, D.C. Lewellen, S.H.H. Tye, <em>A Relation Between Tree Amplitudes of Closed and Open Strings</em>, Nucl.Phys. B269 (1986) 1-23 (<a href='https://doi.org/10.1016/0550-3213(86'>doi:10.1016/0550-3213(86)90362-7</a>90362-7))</li>
+</ul>
+
+<p>See also</p>
+
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Zvi+Bern'>Zvi Bern</a>, <em><a href='http://relativity.livingreviews.org/open?pubNo=lrr-2002-5&amp;page=articlesu5.html'>The KLT relations in field theory</a></em>, Living Reviews in Relativity</p>
@@ -1084,14 +1092,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 20, 2017 14:14:14 
+  Revised on February  7, 2018 02:43:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.49.59)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/KLT+relations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/KLT+relations/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/KLT+relations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/KLT+relations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/KLT+relations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/KLT+relations/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/KLT+relations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/KLT+relations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
