--- a/pages/54.html
+++ b/pages/54.html
@@ -309,11 +309,11 @@ margin-left: 0em;
 
 <div id="revision">
     <hr/>
-<p><math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 <div style='float: right; margin: 0 20px 10px 20px;'><img alt='Urs Schreiber at Fields Institute' src='http://www.christiansaemann.de/higherworkshop2014/photos/thumb.Urs.jpg' width='250'/>
 </div>
 <h1 id='contents'>contents</h1>
-<div class='maruku_toc'><ul><li><a href='#contact'>contact</a></li><li><a href='#myposition'>my position</a></li><li><a href='#myresearch'>my research</a></li><li><a href='#teaching'>teaching</a></li><li><a href='#publications'>publications</a></li><li><a href='#invited_talks_and_lectures'>invited talks and lectures</a></li><li><a href='#students'>students</a></li><li><a href='#lab'><math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab</a></li><li><a href='#column'>column</a></li><li><a href='#more_on_the_web'>more on the web</a></li><li><a href='#CopyrightStatement'>copyright statement</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#contact'>contact</a></li><li><a href='#myposition'>my position</a></li><li><a href='#myresearch'>my research</a></li><li><a href='#teaching'>teaching</a></li><li><a href='#publications'>publications</a></li><li><a href='#invited_talks_and_lectures'>invited talks and lectures</a></li><li><a href='#students'>students</a></li><li><a href='#lab'><math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab</a></li><li><a href='#column'>column</a></li><li><a href='#more_on_the_web'>more on the web</a></li><li><a href='#CopyrightStatement'>copyright statement</a></li></ul></div>
 <h2 id='contact'>contact</h2>
 
 <p>The best way to contact me is to send an email to <a href='mailto:schreiber@math.cas.cz'>schreiber@math.cas.cz</a> or to <a href='mailto:urs.schreiber@gmail.com'>urs.schreiber@gmail.com</a>.</p>
@@ -324,9 +324,7 @@ margin-left: 0em;
 <img src='https://ncatlab.org/schreiber/files/CAS-AGMP.jpg' width='300'/>
 </a>
 </div>
-<p>I am researcher in the department <em><a href='http://www.math.cas.cz/recherche/equipe.php?id_equipe=18&amp;lang=0'>Algebra, Geometry and Mathematical Physics</a></em> of the <a href='http://www.math.cas.cz/recherche/equipe.php?id_equipe=18&amp;lang=0'>Institute of Mathematics</a> at the <a href='http://www.cas.cz/index.html'>Czech Academy of the Sciences</a> (CAS) in <a href='https://en.wikipedia.org/wiki/Prague'>Prague</a>.</p>
-
-<p>Presently I am on leave at the <a href='https://www.mpim-bonn.mpg.de'>Max Planck Institute for Mathematics in Bonn</a>.</p>
+<p>I am permanent researcher in the department <em><a href='http://www.math.cas.cz/recherche/equipe.php?id_equipe=18&amp;lang=0'>Algebra, Geometry and Mathematical Physics</a></em> of the <a href='http://www.math.cas.cz/recherche/equipe.php?id_equipe=18&amp;lang=0'>Institute of Mathematics</a> at the <a href='http://www.cas.cz/index.html'>Czech Academy of the Sciences</a> (CAS) in <a href='https://en.wikipedia.org/wiki/Prague'>Prague</a>.</p>
 
 <h2 id='myresearch'>my research</h2>
 
@@ -365,10 +363,10 @@ margin-left: 0em;
 <h2 id='teaching'>teaching</h2>
 
 <p>See behind the links for detailed lecture notes that I wrote.</p>
-<table><thead><tr><th>date</th><th>lecture notes</th></tr></thead><tbody><tr><td style='text-align: left;'>winter <math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> 2017</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/schreiber/show/65-409%3A+Mathematical+Quantum+Field+Theory' title='schreiber'>Mathematical Quantum Field Theory</a></em></td></tr>
+<table><thead><tr><th>date</th><th>lecture notes</th></tr></thead><tbody><tr><td style='text-align: left;'>winter <math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> 2017</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/schreiber/show/65-409%3A+Mathematical+Quantum+Field+Theory' title='schreiber'>Mathematical Quantum Field Theory</a></em></td></tr>
 <tr><td style='text-align: left;'>summer 2017</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/schreiber/show/Topological+K-Theory' title='schreiber'>Topological K-Theory</a></em></td></tr>
 <tr><td style='text-align: left;'>summer 2017</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/nlab/show/Introduction+to+Topology'>Topology</a></em></td></tr>
-<tr><td style='text-align: left;'>winter <math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> 2016</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/schreiber/show/From+the+Superpoint+to+T-Folds' title='schreiber'>Super Cartan Geometry</a></em></td></tr>
+<tr><td style='text-align: left;'>winter <math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> 2016</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/schreiber/show/From+the+Superpoint+to+T-Folds' title='schreiber'>Super Cartan Geometry</a></em></td></tr>
 <tr><td style='text-align: left;'>summer 2016</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology'>Complex oriented cohomology theory</a></em></td></tr>
 <tr><td style='text-align: left;'>summer 2016</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/nlab/show/Introduction+to+Stable+Homotopy+Theory'>Stable Homotopy Theory</a></em></td></tr>
 <tr><td style='text-align: left;'>summer 2015</td><td style='text-align: left;'><em><a class='existingWikiWord' href='/schreiber/show/Structure+Theory+for+Higher+WZW+Terms' title='schreiber'>Structure Theory for Higher WZW Terms</a></em></td></tr>
@@ -419,7 +417,7 @@ margin-left: 0em;
 <li><a href='http://ncatlab.org/schreiber/show/HomePage#students'>students</a></li>
 </ul>
 
-<h2 id='lab'><math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab</h2>
+<h2 id='lab'><math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab</h2>
 
 <p><a href='http://ncatlab.org/nlab/show/HomePage'><div style='float: right; margin: 0 20px 10px 20px;'><img alt='nLab banner' src='http://i.stack.imgur.com/1hvpz.png' width='250'/></div></a></p>
 
@@ -429,9 +427,9 @@ margin-left: 0em;
 <li><a href='http://ncatlab.org/nlab/show/HomePage'>nLab wiki project</a></li>
 </ul>
 
-<p>in November 2008. It has now more than 11,600 pages (some very short, but some very long). In May 2015 the <math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab installation migrated from a server paid out of my pocket to a server hosted at Carnegie-Mellon University in Pittsburgh, funded by <a class='existingWikiWord' href='/nlab/show/Steve+Awodey'>Steve Awodey</a>’s <a href='http://homotopytypetheory.org/2014/04/29/hott-awarded-a-muri/'>MURI grant</a> for <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> research.</p>
+<p>in November 2008. It has now more than 11,600 pages (some very short, but some very long). In May 2015 the <math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab installation migrated from a server paid out of my pocket to a server hosted at Carnegie-Mellon University in Pittsburgh, funded by <a class='existingWikiWord' href='/nlab/show/Steve+Awodey'>Steve Awodey</a>’s <a href='http://homotopytypetheory.org/2014/04/29/hott-awarded-a-muri/'>MURI grant</a> for <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> research.</p>
 
-<p>For more on what the <math class='maruku-mathml' display='inline' id='mathml_f591c1756bfe607c1206397f892c230617695030_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab is see also</p>
+<p>For more on what the <math class='maruku-mathml' display='inline' id='mathml_58db08e5f4fc9d619157d47990b0d98dadc63716_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab is see also</p>
 
 <ul>
 <li>
@@ -566,14 +564,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 14, 2017 10:50:22 
+  Revised on February  8, 2018 03:09:54 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.134.135)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Urs+Schreiber" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Urs+Schreiber/80" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(80 revisions)</span> | <a href="/nlab/show/diff/Urs+Schreiber" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Urs+Schreiber" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Urs+Schreiber" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Urs+Schreiber/81" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(81 revisions)</span> | <a href="/nlab/show/diff/Urs+Schreiber" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Urs+Schreiber" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
