--- a/pages/4276.html
+++ b/pages/4276.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,6 +309,8 @@ margin-left: 0em;
 
 <div id="revision">
     <p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
+
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>Introduction</a></p>
 
 <h2 id='concepts'>Concepts</h2>
 
@@ -798,14 +800,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  6, 2018 12:31:53 
+  Revised on February  8, 2018 03:11:34 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
